--- a/projects.html
+++ b/projects.html
@@ -3,37 +3,25 @@
 <head>
   <script src="search.js" defer></script>
   <link rel="icon" type="image/x-icon" href="Assets/favicon.ico">
-  <link rel="stylesheet" a="" href="style.css">
-
-
-<style>
-  
-  body{    background-image: url(Assets/background2.jpg)}
-
-</style>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body { 
+      background-image: url(Assets/background2.jpg); 
+    }
+    header {
+      text-align: center;
+      font-size: 3rem;
+      color: white;
+      padding: 20px;
+      text-shadow: 2px 2px 4px black;
+    }
+  </style>
 </head>
 
 <body>
-
-
-  <div class="rectangle"
-  div style="display: table-grid">
-
-    <div style="width:600px; display: table-cell;"> <a href="index.html" style="text-decoration:none">  Home <div class="button">    </div>  </a>   </div>
-  
-
-    <div style="width:600px; display: table-cell;"> <a href="projects.html" style="text-decoration:none"> Games <  <div class="button">   </div>  </a>   </div>
-  
-
-    <div style="width:600px; display: table-cell;"> <a href="upd.html" style="text-decoration:none">  Updates  <div class="button">    </div>  </a>   </div>
-
-    <div style="width:600px; display: table-cell;"> <a href="apps.html" style="text-decoration:none"> Apps   <div class="button">    </div>  </a>   </div>
-  
-
-    <div style="width:600px; display: table-cell;"> <a href="other.html" style="text-decoration:none"> Other  <div class="button">    </div>  </a>   </div>
-  </div>
-
-
+  <header>Helios Games</header>
+</body>
+</html>
 
    <center>
     <div class="search-container">
@@ -986,10 +974,6 @@
 </center>
 
 </div>
-
-
-
-<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "aa43264998fe43bb84b38d38e84c0571"}'></script><!-- End Cloudflare Web Analytics -->
 
 
 
