--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Helios Games</title>
   <script src="search.js" defer></script>
   <link rel="icon" type="image/x-icon" href="Assets/favicon.ico">
   <link rel="stylesheet" href="style.css">
